--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "@tryghost/content-api": "^1.9.1",
+    "date-fns": "^2.28.0",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -18,6 +20,7 @@
     "@types/node": "17.0.29",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.0",
+    "@types/tryghost__content-api": "^1.3.10",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.3"
