--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@meronex/icons": "^4.0.0",
     "@stitches/react": "^1.2.8",
     "@tryghost/content-api": "^1.9.1",
     "date-fns": "^2.28.0",
