--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@meronex/icons": "^4.0.0",
+    "@next/font": "^13.0.7",
+    "@stitches/core": "^1.2.8",
     "@stitches/react": "^1.2.8",
     "@tryghost/content-api": "^1.9.1",
     "date-fns": "^2.28.0",
