--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "date-fns": "^2.28.0",
     "next": "^13.0.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-ga4": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.29",
