--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "next": "^13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga4": "^1.4.1"
+    "react-ga4": "^1.4.1",
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "17.0.29",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.0",
+    "@types/rss": "^0.0.29",
     "@types/tryghost__content-api": "^1.3.10",
     "eslint": "8.14.0",
     "eslint-config-next": "^13.0.7",
