--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "blog",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": ">=8.19.4node -v <9.0.0",
+    "node": ">=16.20.0 <17.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
