--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "npm": ">=8.19.4node -v <9.0.0",
-    "node": ">=16.20.0 <17.0.0"
+    "node": ">=16.20.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@meronex/icons": "^4.0.0",
-    "@next/font": "^13.0.7",
     "@stitches/core": "^1.2.8",
     "@stitches/react": "^1.2.8",
     "@tryghost/content-api": "^1.9.1",
